Start of sounds but needing some zZz's bbl ;)

--- a/math-facts.css
+++ b/math-facts.css
@@ -1,6 +1,9 @@
 #math-app {
   height: 100vh;
 }
+i.material-icons {
+  vertical-align: middle;
+}
 .mode-title {
   font-size: 1.3em;
   text-align: right;
